# Image-Classification-With-CNN

./: .gitignore  README.md  hyperparameters_dto.py  inference.py  inference.yaml  main.py  pyproject.toml  train.py  train.yaml
model/: __init__.py  base_net.py  dropout_net.py  dropout_residual_net.py  residual_net.py
