[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Image-Classification-With-CNN"
version = "0.0.1"
description = "CNN experiments on Scene Dataset"
readme = "README.md"
authors = [
  { name = "berkaytrhn", email = "berkaytrhn@gmail.com" }
]
license = { text = "MIT" }
keywords = ["convolutional neural networks", "pytorch", "image classification"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.11.8"
dependencies = [
    "filelock=3.13.1",
    "fsspec=2024.2.0",
    "Jinja2=3.1.3",
    "MarkupSafe=2.1.5",
    "mpmath=1.3.0",
    "networkx=3.2.1",
    "numpy=1.26.3",
    "pillow=10.2.0",
    "sympy=1.13.1",
    "torch=2.5.1+cu121",
    "torchaudio=2.5.1+cu121",
    "torchvision=0.20.1+cu121",
    "typing_extensions=4.9.0"

]


[project.urls]
"Source" = "https://github.com/berkaytrhn/Image-Classification-With-CNN"



[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

